# Mansoor

./: .gitignore  README.md  pyproject.toml
src/: main.py  token.env
src/bot/: __init__.py
src/cogs/: help.py  regular.py
src/db/: build.sql
src/utils/: db.py
